Velocity solver moved to separate file

--- a/vr_test_ttest.ipynb
+++ b/vr_test_ttest.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,7 @@
     "import astropy.units as u\n",
     "from scipy.stats import mode\n",
     "from scipy.stats import ttest_ind\n",
+    "from calculate_velocity import calculate_velocity\n",
     "\n",
     "\n",
     "sys.path.append('/home/nico/VSCodeRepos/SigMA')\n",
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,86 +162,6 @@
     "\n",
     "df, labels, cols2fit = load_alena_data(fname, n_samples=50_000, delta_perc=0.5, add_noise=True)\n",
     "df = add_rvs(df, labels, keep_fraction=0.3)    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Velocity Solver\n",
-    "\n",
-    "The code for this velocity solver is taken from SigMA."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_velocity(\n",
-    "    data, \n",
-    "    rho,\n",
-    "    ra_col=\"ra\",\n",
-    "    dec_col=\"dec\",\n",
-    "    plx_col=\"parallax\",\n",
-    "    pmra_col=\"pmra\",\n",
-    "    pmdec_col=\"pmdec\",\n",
-    "    rv_col=\"radial_velocity\",\n",
-    "    pmra_err_col=\"pmra_error\",\n",
-    "    pmdec_err_col=\"pmdec_error\",\n",
-    "    rv_err_col=\"radial_velocity_error\",\n",
-    "    rv_max=100,\n",
-    "    rv_min=-100,\n",
-    "):\n",
-    "    cols = [\n",
-    "        ra_col, \n",
-    "        dec_col, \n",
-    "        plx_col, \n",
-    "        pmra_col, \n",
-    "        pmdec_col, \n",
-    "        rv_col, \n",
-    "        pmra_err_col, \n",
-    "        pmdec_err_col, \n",
-    "        rv_err_col\n",
-    "    ] \n",
-    "\n",
-    "    # extract dense core\n",
-    "    cut_dense_core = dense_sample(rho)\n",
-    "    ra, dec, plx, pmra, pmdec, rv, pmra_err, pmdec_err, rv_err = data.loc[\n",
-    "        cut_dense_core\n",
-    "    ][cols].values.T\n",
-    "\n",
-    "    # Calculate a first guess of the optimal velocity\n",
-    "    rv_copy = np.copy(rv)\n",
-    "    rv_copy[np.isnan(rv)] = 0\n",
-    "    rv_err_copy = np.copy(rv_err)\n",
-    "    rv_err_copy[np.isnan(rv_err)] = 1e5\n",
-    "    sol = optimize_velocity_skycoords(\n",
-    "        ra, dec, plx, pmra, pmdec, rv_copy, pmra_err, pmdec_err, rv_err_copy\n",
-    "    )\n",
-    "    optimal_vel = sol.x[:3]\n",
-    "\n",
-    "    rv_computed = np.copy(rv)\n",
-    "    rv_isnan_or_large_err = np.isnan(rv_computed)\n",
-    "    rv_computed[rv_isnan_or_large_err] = vr_solver(\n",
-    "        U=optimal_vel[0],\n",
-    "        V=optimal_vel[1],\n",
-    "        W=optimal_vel[2],\n",
-    "        ra=ra[rv_isnan_or_large_err],\n",
-    "        dec=dec[rv_isnan_or_large_err],\n",
-    "        plx=plx[rv_isnan_or_large_err],\n",
-    "        pmra=pmra[rv_isnan_or_large_err],\n",
-    "        pmdec=pmdec[rv_isnan_or_large_err],\n",
-    "    )\n",
-    "\n",
-    "    rv_computed[rv_isnan_or_large_err & (rv_computed > rv_max)] = rv_max\n",
-    "    rv_computed[rv_isnan_or_large_err & (rv_computed < rv_min)] = rv_min\n",
-    "\n",
-    "    # Transform to uvw\n",
-    "    uvw_computed = transform_velocity(ra, dec, plx, pmra, pmdec, rv_computed)\n",
-    "\n",
-    "    return uvw_computed"
    ]
   },
   {
@@ -563,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
