Deleted unused imports

--- a/vr_test_ttest.ipynb
+++ b/vr_test_ttest.ipynb
@@ -39,9 +39,7 @@
     "\n",
     "\n",
     "sys.path.append('/home/nico/VSCodeRepos/SigMA')\n",
-    "from SigMA.SigMA import SigMA\n",
-    "from NoiseRemoval.bulk_velocity_solver import bulk_velocity_solver, bootstrap_bulk_velocity_solver, dense_sample, optimize_velocity_skycoords\n",
-    "from NoiseRemoval.OptimalVelocity import vr_solver, transform_velocity"
+    "from SigMA.SigMA import SigMA"
    ]
   },
   {
