Deleted irrelevant split

--- a/vr_test_ttest.ipynb
+++ b/vr_test_ttest.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -604,13 +604,9 @@
     }
    ],
    "source": [
-    "split_count = 0\n",
     "correct_splits = 0\n",
     "uvw = []\n",
     "for iteration, cluster_labels in splits.items():\n",
-    "    if iteration == 'iteration_0':\n",
-    "        continue\n",
-    "    split_count += 1\n",
     "    print(f'--- Split of clusters {cluster_labels[0], cluster_labels[1]}---')\n",
     "    # print(iteration, cluster_labels)\n",
     "    # we need the data of the iteration and the weights\n",
@@ -630,7 +626,7 @@
     "    if same_velo != cluster_labels[2]:\n",
     "        correct_splits += 1\n",
     "\n",
-    "print(f'{correct_splits} out of {split_count} were performed correctly')"
+    "print(f'{correct_splits} out of {len(splits)} were performed correctly')"
    ]
   },
   {
