Added error handling

--- a/deconvolution_mean_test.ipynb
+++ b/deconvolution_mean_test.ipynb
@@ -123,14 +123,17 @@
    "outputs": [],
    "source": [
     "def calculate_distance(V, mu, x):\n",
-    "    # reshape and invert the cov matrix\n",
-    "    IV = np.linalg.inv(V.reshape(3, 3))\n",
+    "    try:\n",
+    "        # reshape and invert the cov matrix\n",
+    "        iv = np.linalg.inv(V.reshape(3, 3))\n",
+    "    except:\n",
+    "        raise ValueError(\"Covariance Matrix can not be inverted\")\n",
     "\n",
     "    # flatten the input arrays\n",
     "    mu = mu.flatten()\n",
     "    x = x.flatten()\n",
     "\n",
-    "    return distance.mahalanobis(x, mu, IV)"
+    "    return distance.mahalanobis(x, mu, iv)"
    ]
   },
   {
@@ -139,15 +142,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def perfrom_test(data1, data2):\n",
+    "def perform_test(data1, data2):\n",
     "    xd_left = get_xd(data1)\n",
     "    xd_right = get_xd(data2)\n",
     "\n",
     "    # get test statistic\n",
-    "    stat = np.max([\n",
+    "    stat = np.max(\n",
     "        calculate_distance(xd_left.V, xd_left.mu, xd_right.mu),\n",
     "        calculate_distance(xd_right.V, xd_right.mu, xd_left.mu)\n",
-    "    ])\n",
+    "    )\n",
     "\n",
     "    return stat < 2"
    ]
@@ -169,7 +172,7 @@
     }
    ],
    "source": [
-    "perfrom_test(df_right, df_left)"
+    "perform_test(df_right, df_left)"
    ]
   }
  ],
