--- a/deconvolution_distance_test.ipynb
+++ b/deconvolution_distance_test.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create the two covariance matrices and the mean\n",
     "def get_xd(data_):\n",
-    "    err_sampler = ErrorSampler(df)\n",
+    "    err_sampler = ErrorSampler(data_)\n",
     "    err_sampler.build_covariance_matrix()\n",
     "    # Create sample from errors\n",
     "    data_new = pd.DataFrame(err_sampler.spher2cart(err_sampler.new_sample()), columns=cols)\n",
@@ -113,12 +113,12 @@
     "    # Compute covariance matrix in Galactic coordinates\n",
     "    C_uvw = transform_covariance_shper2gal(ra, dec, plx, C)     \n",
     "    xd = XDSingleCluster(max_iter=200, tol=1e-3).fit(X.values, C_uvw)\n",
-    "    return xd"
+    "    return xd, err_sampler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,25 +138,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def perform_test(data1, data2):\n",
-    "    xd_left = get_xd(data1)\n",
-    "    xd_right = get_xd(data2)\n",
+    "    xd_left, err_smapler_left = get_xd(data1)\n",
+    "    xd_right, err_sampler_right = get_xd(data2)\n",
     "    \n",
     "    # for each data point from each data array we have to calculate the distance to the mean of the other data\n",
     "    max_dist = []\n",
-    "    for d, other_xd in zip([data1, data2], [xd_right, xd_left]):\n",
-    "        dist = [calculate_distance(other_xd.V, other_xd.mu, d.iloc[i][['U', 'V', 'W']].values) for i in range(d.shape[0])]\n",
+    "    for err_sampler, other_xd in zip([err_smapler_left, err_sampler_right], [xd_right, xd_left]):\n",
+    "        sampeled_data = err_sampler_right.spher2cart(err_sampler.new_sample())\n",
+    "        velocity_sampler = sampeled_data[:, [3, 4, 5]]\n",
+    "        dist = [calculate_distance(other_xd.V, other_xd.mu, velocity_sampler[i]) for i in range(velocity_sampler.shape[0])]\n",
     "        max_dist.append(np.max(dist))\n",
     "    return min(max_dist) < 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +167,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
