--- a/error_sampler_ttest.ipynb
+++ b/error_sampler_ttest.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
     "    # generate a sample from both distributions\n",
     "    samples = []\n",
     "    for err_sampler in [err_sampler_left, err_sampler_right]:\n",
-    "        sampeled_data = err_sampler_right.spher2cart(err_sampler.new_sample())\n",
+    "        sampeled_data = err_sampler.spher2cart(err_sampler.new_sample())\n",
     "        samples.append(sampeled_data[:, [3, 4, 5]])\n",
     "\n",
     "    return samples\n"
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=array([1.20337259, 1.22337283, 1.20568426]), pvalue=array([0.22911754, 0.22147768, 0.22822503]))"
+       "Ttest_indResult(statistic=array([-1.63596107, -1.55386979, -1.64634709]), pvalue=array([0.10216304, 0.12053252, 0.10000716]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
