--- a/run_test.ipynb
+++ b/run_test.ipynb
@@ -452,12 +452,9 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "data_no_noise = copy.deepcopy(data)\n",
-    "data_no_noise = data_no_noise[labels_true != -1]\n",
-    "labels_true_no_noise = copy.deepcopy(labels_true)\n",
-    "labels_true_no_noise = labels_true_no_noise[labels_true != -1]\n",
+    "# only plot the true clusters\n",
+    "data_no_noise = copy.deepcopy(data[labels_true != -1])\n",
+    "labels_true_no_noise = copy.deepcopy(labels_true[labels_true != -1])\n",
     "\n",
     "scatter_plot_matrix(data_no_noise, labels_true_no_noise, cols)"
    ]
@@ -466,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting SigMA"
+    "# SigMA Helper Functions"
    ]
   },
   {
@@ -476,6 +473,7 @@
    "outputs": [],
    "source": [
     "def extract_cluster_single(label_bool_arr, clusterer):\n",
+    "    # Written by Sebastian Ratzenböck\n",
     "    cluster_bool_array = remove_noise_simple(label_bool_arr, te_obj=clusterer)\n",
     "    if cluster_bool_array is not None:\n",
     "        return cluster_bool_array\n",
@@ -495,22 +493,23 @@
     "            idx_cluster = data_idx[idx_cluster][cc_idx == np.argmax(np.bincount(cc_idx))]\n",
     "        \n",
     "        cluster_bool_array = np.isin(data_idx, idx_cluster)\n",
-    "        return cluster_bool_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return cluster_bool_array\n",
+    "    \n",
     "def extract_signal(clusterer, labels):\n",
+    "    # Written by Sebastian Ratzenböck\n",
     "    labels_with_noise = -np.ones(clusterer.X.shape[0], dtype=int)\n",
     "    for i, u_cl in enumerate(np.unique(labels[labels>-1])):\n",
     "        cluster_bool_array = extract_cluster_single(labels==u_cl, clusterer)\n",
     "        labels_with_noise[cluster_bool_array] = i\n",
     "        \n",
     "    return labels_with_noise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run & Plot SigMA"
    ]
   },
   {
@@ -550,6 +549,24 @@
     "    transform_function=None\n",
     ")\n",
     "clusterer = SigMA(data=df_fit, **sigma_kwargs).fit(alpha=0.01, knn=15, bh_correction=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['X', 'Y', 'Z']\n",
+    "plot_3D_data(data, xyz_titles=cols, ax_range=[-1000, 1000], labels=clusterer.labels_, true_labels=labels_true)\n",
+    "# plot_3D_data(data, xyz_titles=cols, ax_range=[-1000, 1000], labels=clusterer.labels_, true_labels=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute NMI"
    ]
   },
   {
@@ -618,25 +635,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([ 66, 447]), array([306, 273]))\n"
-     ]
-    }
-   ],
-   "source": [
-    "cols = ['X', 'Y', 'Z']\n",
-    "plot_3D_data(data, xyz_titles=cols, ax_range=[-1000, 1000], labels=clusterer.labels_, true_labels=labels_true)\n",
-    "# plot_3D_data(data, xyz_titles=cols, ax_range=[-1000, 1000], labels=clusterer.labels_, true_labels=None)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -660,26 +658,6 @@
     "    return mid_points, clusterer.labels_\n",
     "\n",
     "mid_points, l0 = produce_baseline(clusterer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([-1,  0,  1]), array([50000,   305,   274]))"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(labels_true, return_counts=True)"
    ]
   },
   {
@@ -754,29 +732,24 @@
    ],
    "source": [
     "# check whether the needed split happens\n",
+    "l0_copy = np.copy(l0)\n",
     "for alpha_i in mid_points:\n",
     "    clusterer = clusterer.fit(alpha=alpha_i, knn=15, bh_correction=False)\n",
     "    l_i = clusterer.labels_\n",
-    "    new_cluster_id = list(set(l_i) - set(l0))\n",
+    "    new_cluster_id = list(set(l_i) - set(l0_copy))\n",
     "    if len(new_cluster_id) == 1:\n",
     "        nc_id = new_cluster_id[0]\n",
-    "        part_of_old_cluster = mode(l0[l_i==nc_id], keepdims=False).mode\n",
+    "        part_of_old_cluster = mode(l0_copy[l_i==nc_id], keepdims=False).mode\n",
     "        print(f'New cluster {nc_id} from old cluster {part_of_old_cluster}')\n",
     "\n",
-    "    \n",
     "        # check the true labels of the two clusters\n",
     "        labels_new, count_new = np.unique(labels_true[l_i==nc_id], return_counts=True)\n",
     "        labels_old, count_old = np.unique(labels_true[l_i==part_of_old_cluster], return_counts=True)\n",
     "\n",
-    "        print(f'New cluster labels: {labels_new}, counts: {count_new}')\n",
-    "        print(f'Old cluster labels: {labels_old}, counts: {count_old}')\n",
+    "        print(f'    New cluster labels: {labels_new}, counts: {count_new}')\n",
+    "        print(f'    Old cluster labels: {labels_old}, counts: {count_old}')\n",
     "\n",
-    "    elif len(new_cluster_id) > 1:\n",
-    "        print('More than one new cluster id')\n",
-    "    else:\n",
-    "        print('No new cluster id')\n",
-    "\n",
-    "    l0 = np.copy(l_i)"
+    "    l0_copy = np.copy(l_i)"
    ]
   },
   {
@@ -797,31 +770,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the cluster labels to a csv file\n",
-    "data.to_csv('/home/nico/Desktop/test_case/data.csv', index=False)\n",
-    "np.save('/home/nico/Desktop/test_case/labels_true.npy', labels_true)\n",
+    "# copy the data and add labels\n",
+    "data_copy = copy.deepcopy(data)\n",
+    "data_copy['labels'] = labels_true\n",
+    "data_copy.to_csv('/home/nico/Desktop/test_case/data.csv', index=False)\n",
     "\n",
     "cluster_labels = pd.DataFrame({'sigma': l0})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sigma': 0.00949519460115467}"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nmi_data"
    ]
   },
   {
@@ -870,14 +824,15 @@
     "    #'xd_mean_distance_sample_distance', \n",
     "    #'error_sample_bootstrap_range_test'\n",
     "]\n",
+    "velocity_tester = VelocityTester(data, clusterer.weights_, test_strat, clusterer, err_sampler)\n",
     "\n",
     "for test_strat in test_strategies:\n",
     "    print(f'Running test strategy {test_strat}')\n",
     "    split_info = []\n",
-    "    velocity_tester = VelocityTester(data, clusterer.weights_, test_strat, clusterer, err_sampler)\n",
     "    iteration = 1\n",
     "    last_alpha = None\n",
     "    l0 = cluster_labels['sigma'].values\n",
+    "    velocity_tester.update_testing_mode(test_strat)\n",
     "\n",
     "    # produce the splits for each alpha\n",
     "    for alpha_i in mid_points:\n",
